--- a/lab3/lab3.ipynb
+++ b/lab3/lab3.ipynb
@@ -197,6 +197,46 @@
     }
    ],
    "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Câu 7"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "source": [
+    " #ignores blank lines and comment lines in PDB files\r\n",
+    "def read_molecule(reader):\r\n",
+    "    content = []\r\n",
+    "    for line in reader:\r\n",
+    "        if not line.startswith('CMNT'):\r\n",
+    "            if not line.isspace():\r\n",
+    "                content.append(line.strip())\r\n",
+    "    for line in content:\r\n",
+    "        print(line)\r\n",
+    "    \r\n",
+    "input_file = open('filePDB.pdb', 'r')\r\n",
+    "print(read_molecule(input_file))\r\n",
+    "input_file.close()"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Tran Thanh Binh\n",
+      "187it14048\n",
+      "/*asdasdasdasdasdasds\n",
+      "it3\n",
+      "None\n"
+     ]
+    }
+   ],
+   "metadata": {}
   }
  ],
  "metadata": {
