--- a/lab3/lab3.ipynb
+++ b/lab3/lab3.ipynb
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "source": [
     "content = []\r\n",
     "for line in open('binh.txt'):\r\n",
@@ -88,11 +88,19 @@
      "text": [
       "Reverse file:\n",
       " \n",
-      "it3\n",
+      "7\n",
       "\n",
-      "187it14048\n",
+      "5\n",
       "\n",
-      "Tráº§n Thanh BÃ¬nh\n",
+      "3\n",
+      "\n",
+      "6\n",
+      "\n",
+      "#it3\n",
+      "\n",
+      "#187it14048\n",
+      "\n",
+      "#Tráº§n Thanh BÃ¬nh\n",
       "\n"
      ]
     }
@@ -108,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "source": [
     "def skip_header(reader):\r\n",
     "    '''Skip the header in reader r, and return the first\r\n",
@@ -146,8 +154,10 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "187it14048\n",
-      "it3\n"
+      "6\n",
+      "3\n",
+      "5\n",
+      "7\n"
      ]
     }
    ],
@@ -162,9 +172,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "source": [
-    "# Cau 5 :\r\n",
     "def smallest_value_skip(reader):\r\n",
     "    \"\"\" (file open for reading) -> number or NoneType\r\n",
     "    Read and process reader, which must start with a time_series \r\n",
@@ -192,7 +201,31 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "5\n"
+      "3\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Câu 6"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "source": [
+    "\r\n"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "6\n"
      ]
     }
    ],
@@ -207,21 +240,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "source": [
-    " #ignores blank lines and comment lines in PDB files\r\n",
-    "def read_molecule(reader):\r\n",
-    "    content = []\r\n",
-    "    for line in reader:\r\n",
-    "        if not line.startswith('CMNT'):\r\n",
-    "            if not line.isspace():\r\n",
-    "                content.append(line.strip())\r\n",
-    "    for line in content:\r\n",
-    "        print(line)\r\n",
-    "    \r\n",
-    "input_file = open('filePDB.pdb', 'r')\r\n",
-    "print(read_molecule(input_file))\r\n",
-    "input_file.close()"
+    " "
    ],
    "outputs": [
     {
