--- a/lab3/lab3.ipynb
+++ b/lab3/lab3.ipynb
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "source": [
     "def skip_header(reader):\r\n",
     "    '''Skip the header in reader r, and return the first\r\n",
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "source": [
     "def smallest_value_skip(reader):\r\n",
     "    \"\"\" (file open for reading) -> number or NoneType\r\n",
@@ -216,9 +216,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "source": [
-    "\r\n"
+    "#uses a continue inside the loop instead of an if in Cau 5\r\n",
+    "def smallest_value_skip2(reader):\r\n",
+    "    \"\"\" (file open for reading) -> NoneType\r\n",
+    "    Read and process reader, which must start with a time_series header.\r\n",
+    "    Return the smallest value after the header. Skip missing values, which\r\n",
+    "    are indicated with a hyphen.\r\n",
+    "    \"\"\"\r\n",
+    "\r\n",
+    "    line = skip_header(reader).strip()\r\n",
+    "    # Now line contains the first data value; this is also the smallest value\r\n",
+    "    # found so far, because it is the only one we have seen.\r\n",
+    "    smallest = int(line)\r\n",
+    "\r\n",
+    "    for line in reader: \r\n",
+    "        line = line.strip()\r\n",
+    "        if line == '-':\r\n",
+    "            continue\r\n",
+    "\r\n",
+    "    value = int(line)\r\n",
+    "    smallest = min(smallest, value)\r\n",
+    "\r\n",
+    "    return smallest\r\n",
+    "\r\n",
+    "input_file = open('binh.txt', 'r')\r\n",
+    "print(smallest_value_skip2(input_file))\r\n",
+    "input_file.close()"
    ],
    "outputs": [
     {
@@ -240,9 +265,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "source": [
-    " "
+    " #ignores blank lines and comment lines in PDB files\r\n",
+    "def read_molecule(reader):\r\n",
+    "    content = []\r\n",
+    "    for line in reader:\r\n",
+    "        if not line.startswith('CMNT'):\r\n",
+    "            if not line.isspace():\r\n",
+    "                content.append(line.strip())\r\n",
+    "    for line in content:\r\n",
+    "        print(line)\r\n",
+    "    \r\n",
+    "input_file = open('filePDB.pdb', 'r')\r\n",
+    "print(read_molecule(input_file))\r\n",
+    "input_file.close()"
    ],
    "outputs": [
     {
