--- a/lab3/lab3.ipynb
+++ b/lab3/lab3.ipynb
@@ -2,28 +2,20 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "Chương 3\r\n",
+    "Chương 3\n",
     "Câu 1"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "source": [
-    "filename = input('Which file would you like to back-up? ')\r\n",
-    "new_filename = filename + '.bak' #tạo file backup\r\n",
-    "backup = open(new_filename, 'w')\r\n",
-    "for line in open(filename):\r\n",
-    "    print(line)\r\n",
-    "    backup.write(line)\r\n",
-    "backup.close()"
-   ],
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "Tráº§n Thanh BÃ¬nh\n",
       "\n",
@@ -34,57 +26,58 @@
      ]
     }
    ],
-   "metadata": {}
+   "source": [
+    "filename = input('Which file would you like to back-up? ')\n",
+    "new_filename = filename + '.bak' #tạo file backup\n",
+    "backup = open(new_filename, 'w')\n",
+    "for line in open(filename):\n",
+    "    print(line)\n",
+    "    backup.write(line)\n",
+    "backup.close()"
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "Câu 2"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "source": [
-    "alkaline_metals = []\r\n",
-    "for line in open('alkaline_metals.txt'):\r\n",
-    "    alkaline_metals.append(line.strip().split(' '))\r\n",
-    "print('alkaline_metals = ', alkaline_metals)"
-   ],
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "alkaline_metals =  [['beryllium', '4', '9.012'], ['magnesium', '12', '24.305'], ['calcium', '20', '20.078'], ['strontium', '38', '87.62'], ['barium', '56', '137.327'], ['radium', '88', '226']]\n"
      ]
     }
    ],
-   "metadata": {}
+   "source": [
+    "alkaline_metals = []\n",
+    "for line in open('alkaline_metals.txt'):\n",
+    "    alkaline_metals.append(line.strip().split(' '))\n",
+    "print('alkaline_metals = ', alkaline_metals)"
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "Câu 3"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "source": [
-    "content = []\r\n",
-    "for line in open('binh.txt'):\r\n",
-    "    content.append(line)\r\n",
-    "print('Reverse file:\\n ',)\r\n",
-    "for line in reversed(content):\r\n",
-    "    print(line)"
-   ],
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "Reverse file:\n",
       " \n",
@@ -105,54 +98,30 @@
      ]
     }
    ],
-   "metadata": {}
+   "source": [
+    "content = []\n",
+    "for line in open('binh.txt'):\n",
+    "    content.append(line)\n",
+    "print('Reverse file:\\n ',)\n",
+    "for line in reversed(content):\n",
+    "    print(line)"
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "câu 4"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 13,
-   "source": [
-    "def skip_header(reader):\r\n",
-    "    '''Skip the header in reader r, and return the first\r\n",
-    "    real piece of data.'''\r\n",
-    "    \r\n",
-    "    # Read the description line and then the comment lines.\r\n",
-    "    line = reader.readline()    \r\n",
-    "    line = reader.readline()\r\n",
-    "    while line.startswith('#'):\r\n",
-    "        line = reader.readline() \r\n",
-    "    # Now line contains the first real piece of data.\r\n",
-    "    return line\r\n",
-    "\r\n",
-    "def process_file(reader):\r\n",
-    "    '''(file open for reading) -> NoneType\r\n",
-    "    Read and print the data from reader, which must start with a single\r\n",
-    "    description line, then a sequence of lines beginning with '#', \r\n",
-    "    then a sequence of data.\r\n",
-    "    '''\r\n",
-    "\r\n",
-    "    # Find the first piece of data.\r\n",
-    "    line = skip_header(reader).strip()\r\n",
-    "    print(line)\r\n",
-    "    # Read the rest of the data.\r\n",
-    "    for line in reader:\r\n",
-    "        line = line.strip()\r\n",
-    "        print(line)\r\n",
-    "\r\n",
-    "input_file = open('binh.txt', 'r')\r\n",
-    "process_file(input_file)\r\n",
-    "input_file.close()"
-   ],
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "6\n",
       "3\n",
@@ -161,130 +130,147 @@
      ]
     }
    ],
-   "metadata": {}
+   "source": [
+    "def skip_header(reader):\n",
+    "    '''Skip the header in reader r, and return the first\n",
+    "    real piece of data.'''\n",
+    "    \n",
+    "    # Read the description line and then the comment lines.\n",
+    "    line = reader.readline()    \n",
+    "    line = reader.readline()\n",
+    "    while line.startswith('#'):\n",
+    "        line = reader.readline() \n",
+    "    # Now line contains the first real piece of data.\n",
+    "    return line\n",
+    "\n",
+    "def process_file(reader):\n",
+    "    '''(file open for reading) -> NoneType\n",
+    "    Read and print the data from reader, which must start with a single\n",
+    "    description line, then a sequence of lines beginning with '#', \n",
+    "    then a sequence of data.\n",
+    "    '''\n",
+    "\n",
+    "    # Find the first piece of data.\n",
+    "    line = skip_header(reader).strip()\n",
+    "    print(line)\n",
+    "    # Read the rest of the data.\n",
+    "    for line in reader:\n",
+    "        line = line.strip()\n",
+    "        print(line)\n",
+    "\n",
+    "input_file = open('binh.txt', 'r')\n",
+    "process_file(input_file)\n",
+    "input_file.close()"
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "câu 5"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 14,
-   "source": [
-    "def smallest_value_skip(reader):\r\n",
-    "    \"\"\" (file open for reading) -> number or NoneType\r\n",
-    "    Read and process reader, which must start with a time_series \r\n",
-    "    header.\r\n",
-    "    Return the smallest value after the header. Skip missing values, \r\n",
-    "    which are indicated with a hyphen.\"\"\"\r\n",
-    "    \r\n",
-    "    line = skip_header(reader).strip()\r\n",
-    "    # Only execute this code, if there is data following the header.\r\n",
-    "    if line != '':\r\n",
-    "        smallest = int(line)\r\n",
-    "    for line in reader:\r\n",
-    "        line = line.strip()\r\n",
-    "        if line != '-':\r\n",
-    "            value = int(line)\r\n",
-    "            smallest = min(smallest, value)\r\n",
-    "    return smallest\r\n",
-    "\r\n",
-    "input_file = open('binh.txt', 'r')\r\n",
-    "print(smallest_value_skip(input_file))\r\n",
-    "input_file.close()"
-   ],
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "3\n"
      ]
     }
    ],
-   "metadata": {}
+   "source": [
+    "def smallest_value_skip(reader):\n",
+    "    \"\"\" (file open for reading) -> number or NoneType\n",
+    "    Read and process reader, which must start with a time_series \n",
+    "    header.\n",
+    "    Return the smallest value after the header. Skip missing values, \n",
+    "    which are indicated with a hyphen.\"\"\"\n",
+    "    \n",
+    "    line = skip_header(reader).strip()\n",
+    "    # Only execute this code, if there is data following the header.\n",
+    "    if line != '':\n",
+    "        smallest = int(line)\n",
+    "    for line in reader:\n",
+    "        line = line.strip()\n",
+    "        if line != '-':\n",
+    "            value = int(line)\n",
+    "            smallest = min(smallest, value)\n",
+    "    return smallest\n",
+    "\n",
+    "input_file = open('binh.txt', 'r')\n",
+    "print(smallest_value_skip(input_file))\n",
+    "input_file.close()"
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "Câu 6"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 15,
-   "source": [
-    "#uses a continue inside the loop instead of an if in Cau 5\r\n",
-    "def smallest_value_skip2(reader):\r\n",
-    "    \"\"\" (file open for reading) -> NoneType\r\n",
-    "    Read and process reader, which must start with a time_series header.\r\n",
-    "    Return the smallest value after the header. Skip missing values, which\r\n",
-    "    are indicated with a hyphen.\r\n",
-    "    \"\"\"\r\n",
-    "\r\n",
-    "    line = skip_header(reader).strip()\r\n",
-    "    # Now line contains the first data value; this is also the smallest value\r\n",
-    "    # found so far, because it is the only one we have seen.\r\n",
-    "    smallest = int(line)\r\n",
-    "\r\n",
-    "    for line in reader: \r\n",
-    "        line = line.strip()\r\n",
-    "        if line == '-':\r\n",
-    "            continue\r\n",
-    "\r\n",
-    "    value = int(line)\r\n",
-    "    smallest = min(smallest, value)\r\n",
-    "\r\n",
-    "    return smallest\r\n",
-    "\r\n",
-    "input_file = open('binh.txt', 'r')\r\n",
-    "print(smallest_value_skip2(input_file))\r\n",
-    "input_file.close()"
-   ],
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "6\n"
      ]
     }
    ],
-   "metadata": {}
+   "source": [
+    "#uses a continue inside the loop instead of an if in Cau 5\n",
+    "def smallest_value_skip2(reader):\n",
+    "    \"\"\" (file open for reading) -> NoneType\n",
+    "    Read and process reader, which must start with a time_series header.\n",
+    "    Return the smallest value after the header. Skip missing values, which\n",
+    "    are indicated with a hyphen.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    line = skip_header(reader).strip()\n",
+    "    # Now line contains the first data value; this is also the smallest value\n",
+    "    # found so far, because it is the only one we have seen.\n",
+    "    smallest = int(line)\n",
+    "\n",
+    "    for line in reader: \n",
+    "        line = line.strip()\n",
+    "        if line == '-':\n",
+    "            continue\n",
+    "\n",
+    "    value = int(line)\n",
+    "    smallest = min(smallest, value)\n",
+    "\n",
+    "    return smallest\n",
+    "\n",
+    "input_file = open('binh.txt', 'r')\n",
+    "print(smallest_value_skip2(input_file))\n",
+    "input_file.close()"
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "Câu 7"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 16,
-   "source": [
-    " #ignores blank lines and comment lines in PDB files\r\n",
-    "def read_molecule(reader):\r\n",
-    "    content = []\r\n",
-    "    for line in reader:\r\n",
-    "        if not line.startswith('CMNT'):\r\n",
-    "            if not line.isspace():\r\n",
-    "                content.append(line.strip())\r\n",
-    "    for line in content:\r\n",
-    "        print(line)\r\n",
-    "    \r\n",
-    "input_file = open('filePDB.pdb', 'r')\r\n",
-    "print(read_molecule(input_file))\r\n",
-    "input_file.close()"
-   ],
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "Tran Thanh Binh\n",
       "187it14048\n",
@@ -294,30 +280,44 @@
      ]
     }
    ],
-   "metadata": {}
+   "source": [
+    " #ignores blank lines and comment lines in PDB files\n",
+    "def read_molecule(reader):\n",
+    "    content = []\n",
+    "    for line in reader:\n",
+    "        if not line.startswith('CMNT'):\n",
+    "            if not line.isspace():\n",
+    "                content.append(line.strip())\n",
+    "    for line in content:\n",
+    "        print(line)\n",
+    "    \n",
+    "input_file = open('filePDB.pdb', 'r')\n",
+    "print(read_molecule(input_file))\n",
+    "input_file.close()"
+   ]
   }
  ],
  "metadata": {
-  "orig_nbformat": 4,
+  "interpreter": {
+   "hash": "6edcd4e5c1451bef1a77fe6d1e23e782390f81ab75b829f27e49843af96263a2"
+  },
+  "kernelspec": {
+   "display_name": "Python 3.8.8 64-bit ('base': conda)",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python",
-   "version": "3.8.8",
-   "mimetype": "text/x-python",
    "codemirror_mode": {
     "name": "ipython",
     "version": 3
    },
-   "pygments_lexer": "ipython3",
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
    "nbconvert_exporter": "python",
-   "file_extension": ".py"
+   "pygments_lexer": "ipython3",
+   "version": "3.8.8"
   },
-  "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3.8.8 64-bit ('base': conda)"
-  },
-  "interpreter": {
-   "hash": "6edcd4e5c1451bef1a77fe6d1e23e782390f81ab75b829f27e49843af96263a2"
-  }
+  "orig_nbformat": 4
  },
  "nbformat": 4,
  "nbformat_minor": 2
