--- a/lab4/lab4.ipynb
+++ b/lab4/lab4.ipynb
@@ -2,200 +2,185 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "Câu 1"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "source": [
-    "def find_dups(L):\r\n",
-    "  elem_set = set()\r\n",
-    "  dups_set = set()\r\n",
-    "  for entry in L:\r\n",
-    "    len_initial = len(elem_set)\r\n",
-    "    elem_set.add(entry)\r\n",
-    "    len_after = len(elem_set)\r\n",
-    "    if len_initial == len_after:\r\n",
-    "      dups_set.add(entry)\r\n",
-    "  return(dups_set)\r\n",
-    "find_dups([1, 1, 2, 3, 4, 2])\r\n"
-   ],
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "{1, 2}"
       ]
      },
+     "execution_count": 1,
      "metadata": {},
-     "execution_count": 3
+     "output_type": "execute_result"
     }
    ],
-   "metadata": {}
+   "source": [
+    "def find_dups(L):\n",
+    "  elem_set = set()\n",
+    "  dups_set = set()\n",
+    "  for entry in L:\n",
+    "    len_initial = len(elem_set)\n",
+    "    elem_set.add(entry)\n",
+    "    len_after = len(elem_set)\n",
+    "    if len_initial == len_after:\n",
+    "      dups_set.add(entry)\n",
+    "  return(dups_set)\n",
+    "find_dups([1, 1, 2, 3, 4, 2])\n"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "source": [
-    "find_dups([1, 2, 3, 4])"
-   ],
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "set()"
       ]
      },
+     "execution_count": 4,
      "metadata": {},
-     "execution_count": 4
+     "output_type": "execute_result"
     }
    ],
-   "metadata": {}
+   "source": [
+    "find_dups([1, 2, 3, 4])"
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "Câu 2"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
-   "source": [
-    "def mating_pairs(males, females):\r\n",
-    "  pairs = set()\r\n",
-    "  num_gerbils = len(males)\r\n",
-    "  for i in range(num_gerbils):\r\n",
-    "    male = males.pop()\r\n",
-    "    female = females.pop()\r\n",
-    "    pairs.add((male, female),)\r\n",
-    "  return pairs\r\n",
-    "\r\n",
-    "mating_pairs({'Anne', 'Beatrice', 'Cari'}, {'Ali', 'Bob', 'Chen'})"
-   ],
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "{('Anne', 'Bob'), ('Beatrice', 'Chen'), ('Cari', 'Ali')}"
       ]
      },
+     "execution_count": 9,
      "metadata": {},
-     "execution_count": 9
+     "output_type": "execute_result"
     }
    ],
-   "metadata": {}
+   "source": [
+    "def mating_pairs(males, females):\n",
+    "  pairs = set()\n",
+    "  num_gerbils = len(males)\n",
+    "  for i in range(num_gerbils):\n",
+    "    male = males.pop()\n",
+    "    female = females.pop()\n",
+    "    pairs.add((male, female),)\n",
+    "  return pairs\n",
+    "\n",
+    "mating_pairs({'Anne', 'Beatrice', 'Cari'}, {'Ali', 'Bob', 'Chen'})"
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "Câu 3"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 12,
-   "source": [
-    "def mating_pairs(animals, nums):\r\n",
-    "  pairs = set()\r\n",
-    "  num_gerbils = len(animals)\r\n",
-    "  for i in range(num_gerbils):\r\n",
-    "    animal = animals.pop()\r\n",
-    "    num = nums.pop()\r\n",
-    "    pairs.add((animal, num),)\r\n",
-    "  return pairs\r\n",
-    "\r\n",
-    "mating_pairs({'Mouse','Tiger','Dragon'}, {1,3,5})"
-   ],
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "{('Dragon', 5), ('Mouse', 1), ('Tiger', 3)}"
       ]
      },
+     "execution_count": 12,
      "metadata": {},
-     "execution_count": 12
+     "output_type": "execute_result"
     }
    ],
-   "metadata": {}
+   "source": [
+    "def mating_pairs(animals, nums):\n",
+    "  pairs = set()\n",
+    "  num_gerbils = len(animals)\n",
+    "  for i in range(num_gerbils):\n",
+    "    animal = animals.pop()\n",
+    "    num = nums.pop()\n",
+    "    pairs.add((animal, num),)\n",
+    "  return pairs\n",
+    "\n",
+    "mating_pairs({'Mouse','Tiger','Dragon'}, {1,3,5})"
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "Câu 5"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 15,
-   "source": [
-    "def count_values(dic):\r\n",
-    "  fun = []\r\n",
-    "  for key, value in dic.items():\r\n",
-    "    fun.append(value)\r\n",
-    "  for key, value in dic.items():\r\n",
-    "    count = 0\r\n",
-    "    for i in fun:\r\n",
-    "      if i == value:\r\n",
-    "        count = count + 1\r\n",
-    "    if count == 1:\r\n",
-    "      print(value)\r\n",
-    "      \r\n",
-    "dic = {'red': 1, 'green': 1, 'blue': 2}\r\n",
-    "count_values(dic)"
-   ],
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "2\n"
      ]
     }
    ],
-   "metadata": {}
+   "source": [
+    "def count_values(dic):\n",
+    "  fun = []\n",
+    "  for key, value in dic.items():\n",
+    "    fun.append(value)\n",
+    "  for key, value in dic.items():\n",
+    "    count = 0\n",
+    "    for i in fun:\n",
+    "      if i == value:\n",
+    "        count = count + 1\n",
+    "    if count == 1:\n",
+    "      print(value)\n",
+    "      \n",
+    "dic = {'red': 1, 'green': 1, 'blue': 2}\n",
+    "count_values(dic)"
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "Câu 6"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 20,
-   "source": [
-    "def least(dic):\r\n",
-    "    min = 999999999\r\n",
-    "    for key, value in dic.items():\r\n",
-    "        if value < min:\r\n",
-    "            min = value\r\n",
-    "            str1 = key\r\n",
-    "        else:\r\n",
-    "         continue\r\n",
-    "        for key, value in dic.items():\r\n",
-    "         if key == str1:\r\n",
-    "            print(key)\r\n",
-    "\r\n",
-    "nguyentu = {'neutron': 0.55, 'proton': 0.21, 'meson': 0.03, 'muon': 0.07, 'neutrino': 0.80}\r\n",
-    "least(nguyentu)"
-   ],
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "neutron\n",
       "proton\n",
@@ -203,204 +188,219 @@
      ]
     }
    ],
-   "metadata": {}
+   "source": [
+    "def least(dic):\n",
+    "    min = 999999999\n",
+    "    for key, value in dic.items():\n",
+    "        if value < min:\n",
+    "            min = value\n",
+    "            str1 = key\n",
+    "        else:\n",
+    "         continue\n",
+    "        for key, value in dic.items():\n",
+    "         if key == str1:\n",
+    "            print(key)\n",
+    "\n",
+    "nguyentu = {'neutron': 0.55, 'proton': 0.21, 'meson': 0.03, 'muon': 0.07, 'neutrino': 0.80}\n",
+    "least(nguyentu)"
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "Câu 7"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 21,
-   "source": [
-    "\r\n",
-    "def count_duplicates(dictionary):\r\n",
-    "    duplicates = 0\r\n",
-    "    values = list(dictionary.values())\r\n",
-    "    for item in values:      \r\n",
-    "        if values.count(item) >= 2:\r\n",
-    "            duplicates = duplicates + 1     \r\n",
-    "            num_occurrences = values.count(item)\r\n",
-    "            for i in range(num_occurrences):\r\n",
-    "                values.remove(item)\r\n",
-    "\r\n",
-    "    return duplicates\r\n",
-    "count_duplicates({'A': 1, 'B': 2, 'C': 2, 'D': 1, 'E': 3})"
-   ],
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "2"
       ]
      },
+     "execution_count": 21,
      "metadata": {},
-     "execution_count": 21
+     "output_type": "execute_result"
     }
    ],
-   "metadata": {}
+   "source": [
+    "\n",
+    "def count_duplicates(dictionary):\n",
+    "    duplicates = 0\n",
+    "    values = list(dictionary.values())\n",
+    "    for item in values:      \n",
+    "        if values.count(item) >= 2:\n",
+    "            duplicates = duplicates + 1     \n",
+    "            num_occurrences = values.count(item)\n",
+    "            for i in range(num_occurrences):\n",
+    "                values.remove(item)\n",
+    "\n",
+    "    return duplicates\n",
+    "count_duplicates({'A': 1, 'B': 2, 'C': 2, 'D': 1, 'E': 3})"
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "Câu 8"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 22,
-   "source": [
-    "\r\n",
-    "def is_balanced(dic):\r\n",
-    "  balanced=0\r\n",
-    "  for key, value in dic.items():\r\n",
-    "    balanced += value\r\n",
-    "  if balanced == 1:\r\n",
-    "    return True\r\n",
-    "  else:\r\n",
-    "    return False\r\n",
-    "color = {'R':0.3,'G':0.3,'B':0.2}\r\n",
-    "is_balanced(color)"
-   ],
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "False"
       ]
      },
+     "execution_count": 22,
      "metadata": {},
-     "execution_count": 22
+     "output_type": "execute_result"
     }
    ],
-   "metadata": {}
+   "source": [
+    "\n",
+    "def is_balanced(dic):\n",
+    "  balanced=0\n",
+    "  for key, value in dic.items():\n",
+    "    balanced += value\n",
+    "  if balanced == 1:\n",
+    "    return True\n",
+    "  else:\n",
+    "    return False\n",
+    "color = {'R':0.3,'G':0.3,'B':0.2}\n",
+    "is_balanced(color)"
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "Câu 9"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 25,
-   "source": [
-    "def dict_intersect(dic1,dic2):\r\n",
-    "  dic3 = {}\r\n",
-    "  for key, value in dic1.items():\r\n",
-    "    for key1, value1 in dic2.items():\r\n",
-    "      if ((key == key1) and (value ==value1)):\r\n",
-    "        dic3[key] = value\r\n",
-    "  return dic3\r\n",
-    "dic1 = {'red': 1, 'green': 1, 'blue': 2}\r\n",
-    "dic2 = {'red': 1, 'green': 5, 'blue': 2, 'black': 4}\r\n",
-    "dict_intersect(dic1,dic2)"
-   ],
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "{'red': 1, 'blue': 2}"
       ]
      },
+     "execution_count": 25,
      "metadata": {},
-     "execution_count": 25
+     "output_type": "execute_result"
     }
    ],
-   "metadata": {}
+   "source": [
+    "def dict_intersect(dic1,dic2):\n",
+    "  dic3 = {}\n",
+    "  for key, value in dic1.items():\n",
+    "    for key1, value1 in dic2.items():\n",
+    "      if ((key == key1) and (value ==value1)):\n",
+    "        dic3[key] = value\n",
+    "  return dic3\n",
+    "dic1 = {'red': 1, 'green': 1, 'blue': 2}\n",
+    "dic2 = {'red': 1, 'green': 5, 'blue': 2, 'black': 4}\n",
+    "dict_intersect(dic1,dic2)"
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "Câu 12"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 26,
-   "source": [
-    "def sparse_add(vector_a, vector_b):\r\n",
-    "  sum = vector_a.copy()\r\n",
-    "  for key in vector_b:\r\n",
-    "    if key in sum:\r\n",
-    "      sum[key] = sum[key] + vector_b[key]\r\n",
-    "    else:\r\n",
-    "      sum[key] = vector_b[key]\r\n",
-    "\r\n",
-    "  return sum\r\n",
-    "sparse_add({1: 3, 2: 3, 3: 4}, {2: 4, 3: 5, 4: 6})"
-   ],
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "{1: 3, 2: 7, 3: 9, 4: 6}"
       ]
      },
+     "execution_count": 26,
      "metadata": {},
-     "execution_count": 26
+     "output_type": "execute_result"
     }
    ],
-   "metadata": {}
+   "source": [
+    "def sparse_add(vector_a, vector_b):\n",
+    "  sum = vector_a.copy()\n",
+    "  for key in vector_b:\n",
+    "    if key in sum:\n",
+    "      sum[key] = sum[key] + vector_b[key]\n",
+    "    else:\n",
+    "      sum[key] = vector_b[key]\n",
+    "\n",
+    "  return sum\n",
+    "sparse_add({1: 3, 2: 3, 3: 4}, {2: 4, 3: 5, 4: 6})"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 27,
-   "source": [
-    "def sparse_dot(vector_a, vector_b):\r\n",
-    "    multiplication = 0\r\n",
-    "    for key1 in vector_a:\r\n",
-    "        if key1 in vector_b:\r\n",
-    "            multiplication = multiplication + vector_a[key1] * vector_b[key1]\r\n",
-    "    return multiplication\r\n",
-    "sparse_dot({1: 3, 2: 3, 3: 4}, {2: 4, 3: 5, 4: 6})"
-   ],
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "32"
       ]
      },
+     "execution_count": 27,
      "metadata": {},
-     "execution_count": 27
+     "output_type": "execute_result"
     }
    ],
-   "metadata": {}
+   "source": [
+    "def sparse_dot(vector_a, vector_b):\n",
+    "    multiplication = 0\n",
+    "    for key1 in vector_a:\n",
+    "        if key1 in vector_b:\n",
+    "            multiplication = multiplication + vector_a[key1] * vector_b[key1]\n",
+    "    return multiplication\n",
+    "sparse_dot({1: 3, 2: 3, 3: 4}, {2: 4, 3: 5, 4: 6})"
+   ]
   }
  ],
  "metadata": {
-  "orig_nbformat": 4,
+  "interpreter": {
+   "hash": "6edcd4e5c1451bef1a77fe6d1e23e782390f81ab75b829f27e49843af96263a2"
+  },
+  "kernelspec": {
+   "display_name": "Python 3.8.8 64-bit ('base': conda)",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python",
-   "version": "3.8.8",
-   "mimetype": "text/x-python",
    "codemirror_mode": {
     "name": "ipython",
     "version": 3
    },
-   "pygments_lexer": "ipython3",
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
    "nbconvert_exporter": "python",
-   "file_extension": ".py"
+   "pygments_lexer": "ipython3",
+   "version": "3.8.8"
   },
-  "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3.8.8 64-bit ('base': conda)"
-  },
-  "interpreter": {
-   "hash": "6edcd4e5c1451bef1a77fe6d1e23e782390f81ab75b829f27e49843af96263a2"
-  }
+  "orig_nbformat": 4
  },
  "nbformat": 4,
  "nbformat_minor": 2
